[gd_scene load_steps=14 format=2]

[ext_resource path="res://Puzzles/Scripts/Puzzle1.gd" type="Script" id=1]
[ext_resource path="res://Puzzles/Images/Untitled.png" type="Texture" id=2]
[ext_resource path="res://Assets/WallTiles/TileSets/WallTileSetNewestEdition.tres" type="TileSet" id=3]
[ext_resource path="res://Puzzles/Scenes/Node.tscn" type="PackedScene" id=4]
[ext_resource path="res://Puzzles/Scripts/CollisionArea2D.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Puzzles/Scenes/Vert.gd" type="Script" id=7]

[sub_resource type="NavigationPolygon" id=1]

vertices = PoolVector2Array( 797.569, 547.881, 975.833, 547.881, 764.2, 548.786, 19.6632, 580.645, 241.703, 556.025, 999.621, 581.781, 279.463, 548.786, 511.112, 49.8555, 961.782, 48.3762, 546.419, 56.5203, 1000.76, 21.3726, 973.198, 440.198, 967.929, 398.572, 967.051, 294.509, 20.0421, 20.7665, 48.2157, 47.2725, 778.25, 258.313, 779.128, 182.301, 808.985, 145.2, 816.01, 255.598, 813.376, 294.509, 47.3802, 259.081, 960.026, 257.408, 545.541, 139.771, 275.95, 183.206, 508.605, 144.566, 47.046, 557.248, 49.9704, 446.608, 49.5526, 416.042, 241.703, 447.437, 278.585, 457.391, 237.051, 146.288, 236.215, 254.775, 275.072, 253.788, 237.312, 285.46, 771.225, 294.509, 806.351, 415.765, 769.468, 408.526, 278.585, 293.604, 239.068, 414.86, 275.072, 411.241, 803.716, 447.437, 762.443, 449.247, 48.5107, 290.889 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 4, 2, 1, 5 ), PoolIntArray( 6, 2, 4 ), PoolIntArray( 7, 8, 9 ), PoolIntArray( 10, 5, 11, 12, 13 ), PoolIntArray( 14, 10, 8, 7, 15 ), PoolIntArray( 16, 17, 18, 19, 20 ), PoolIntArray( 3, 14, 15, 21 ), PoolIntArray( 8, 10, 13, 22 ), PoolIntArray( 23, 18, 17, 24, 25 ), PoolIntArray( 26, 4, 3 ), PoolIntArray( 27, 26, 3, 21, 28 ), PoolIntArray( 6, 4, 29, 30 ), PoolIntArray( 22, 13, 20, 19 ), PoolIntArray( 25, 7, 9, 23 ), PoolIntArray( 31, 25, 24 ), PoolIntArray( 32, 31, 24, 33, 34 ), PoolIntArray( 35, 16, 20, 36, 37 ), PoolIntArray( 33, 16, 35, 38, 34 ), PoolIntArray( 39, 40, 37, 36, 41, 42, 30, 29 ), PoolIntArray( 40, 39, 34, 38 ), PoolIntArray( 0, 2, 42, 41 ), PoolIntArray( 32, 34, 43, 21 ), PoolIntArray( 5, 1, 11 ), PoolIntArray( 12, 11, 41, 36 ), PoolIntArray( 39, 29, 27, 28 ), PoolIntArray( 28, 21, 43 ) ]
outlines = [ PoolVector2Array( 20.0421, 20.7665, 19.6632, 580.645, 999.621, 581.781, 1000.76, 21.3726 ), PoolVector2Array( 511.112, 49.8555, 48.2157, 47.2725, 47.3802, 259.081, 236.215, 254.775, 237.051, 146.288, 508.605, 144.566 ), PoolVector2Array( 48.5107, 290.889, 237.312, 285.46, 239.068, 414.86, 49.5526, 416.042 ), PoolVector2Array( 49.9704, 446.608, 241.703, 447.437, 241.703, 556.025, 47.046, 557.248 ), PoolVector2Array( 275.95, 183.206, 275.072, 253.788, 778.25, 258.313, 779.128, 182.301 ), PoolVector2Array( 546.419, 56.5203, 545.541, 139.771, 808.985, 145.2, 816.01, 255.598, 960.026, 257.408, 961.782, 48.3762 ), PoolVector2Array( 278.585, 293.604, 275.072, 411.241, 769.468, 408.526, 771.225, 294.509 ), PoolVector2Array( 278.585, 457.391, 279.463, 548.786, 764.2, 548.786, 762.443, 449.247 ), PoolVector2Array( 797.569, 547.881, 975.833, 547.881, 973.198, 440.198, 803.716, 447.437 ), PoolVector2Array( 813.376, 294.509, 806.351, 415.765, 967.929, 398.572, 967.051, 294.509 ) ]

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 51.6167, 49.3596, 0, 0, 0, 0, 963.259, 54.1704, 0, 0, 0, 0, 964.462, 275.466, 0, 0, 0, 0, 781.652, 273.061, 0, 0, 0, 0, 780.45, 417.384, 0, 0, 0, 0, 271.71, 416.182, 0, 0, 0, 0, 271.71, 543.667, 0, 0, 0, 0, 785.26, 543.667, 0, 0, 0, 0, 790.071, 267.047, 0, 0, 0, 0, 52.8194, 270.655, 0, 0, 0, 0, 50.7805, 48.5664 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 957.373, 421.538, 0, 0, 0, 0, 959.782, 52.9933, 0, 0, 0, 0, 528.609, 48.1758, 0, 0, 0, 0, 528.609, 161.389, 0, 0, 0, 0, 781.532, 166.206, 0, 0, 0, 0, 783.94, 548, 0, 0, 0, 0, 49.2598, 546.795, 0, 0, 0, 0, 50.4642, 277.011, 0, 0, 0, 0, 273.277, 274.602, 0, 0, 0, 0, 274.482, 417.925, 0, 0, 0, 0, 958.578, 422.742 )
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 273.277, 161.389, 0, 0, 0, 0, 783.94, 163.798, 0, 0, 0, 0, 791.167, 274.602, 0, 0, 0, 0, 958.578, 273.398, 0, 0, 0, 0, 965.804, 545.591, 0, 0, 0, 0, 45.6465, 548, 0, 0, 0, 0, 48.0554, 417.925, 0, 0, 0, 0, 270.868, 422.742, 0, 0, 0, 0, 273.277, 163.798, 0, 0, 0, 0, 273.315, 161.454 )
}

[sub_resource type="Curve2D" id=5]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 55.2001, 272.838, 0, 0, 0, 0, 53.0315, 419.216, 0, 0, 0, 0, 961.661, 417.048, 0, 0, 0, 0, 961.661, 542.825, 0, 0, 0, 0, 784.923, 547.162, 0, 0, 0, 0, 783.839, 275.007, 0, 0, 0, 0, 785.829, 163.383, 0, 0, 0, 0, 533.844, 153.95, 0, 0, 0, 0, 539.234, 51.539, 0, 0, 0, 0, 965.049, 50.1915, 0, 0, 0, 0, 959.659, 275.227, 0, 0, 0, 0, 58.1701, 275.227 )
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 45, 45 )

[node name="Puzzle1" type="Navigation2D"]

scale = Vector2( 0.24, 0.24 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 176.0
margin_bottom = 80.0
rect_scale = Vector2( 13, 13 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="TileMap" type="TileMap" parent="." index="1"]

scale = Vector2( 0.7, 0.7 )
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 13, 0, 131082, 13, 0, 131083, 13, 0, 131084, 13, 0, 131085, 13, 0, 131086, 13, 0, 131087, 13, 0, 131088, 13, 0, 131089, 13, 0, 131090, 13, 0, 131091, 13, 0, 131092, 13, 0, 131093, 13, 0, 131094, 13, 0, 131095, 13, 0, 131096, 13, 0, 131097, 13, 0, 131098, 13, 0, 131099, 13, 0, 131100, 13, 0, 131101, 13, 0, 131102, 13, 0, 131103, 13, 0, 131104, 13, 0, 131105, 13, 0, 131106, 13, 0, 131107, 13, 0, 131108, 13, 0, 131109, 13, 0, 131110, 13, 0, 131111, 13, 0, 131112, 13, 0, 131113, 13, 0, 131114, 13, 0, 131115, 13, 0, 131116, 13, 0, 131117, 13, 0, 131118, 13, 0, 131119, 13, 0, 131120, 13, 0, 131121, 13, 0, 131122, 13, 0, 131123, 13, 0, 131124, 13, 0, 131125, 13, 0, 131126, 13, 0, 131127, 13, 0, 131128, 13, 0, 131129, 13, 0, 131130, 13, 0, 131131, 13, 0, 131132, 13, 0, 131133, 13, 0, 131134, 13, 0, 131135, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 13, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 13, 0, 196623, 13, 0, 196624, 13, 0, 196625, 13, 0, 196626, 13, 0, 196627, 13, 0, 196628, 13, 0, 196629, 13, 0, 196630, 13, 0, 196631, 13, 0, 196632, 13, 0, 196633, 13, 0, 196634, 13, 0, 196635, 13, 0, 196636, 13, 0, 196637, 13, 0, 196638, 13, 0, 196639, 13, 0, 196640, 13, 0, 196641, 13, 0, 196642, 13, 0, 196643, 13, 0, 196644, 13, 0, 196645, 13, 0, 196646, 13, 0, 196647, 13, 0, 196648, 13, 0, 196649, 13, 0, 196650, 13, 0, 196651, 13, 0, 196652, 13, 0, 196653, 13, 0, 196654, 13, 0, 196655, 13, 0, 196656, 13, 0, 196657, 13, 0, 196658, 13, 0, 196659, 13, 0, 196660, 13, 0, 196661, 13, 0, 196662, 13, 0, 196663, 13, 0, 196664, 13, 0, 196665, 13, 0, 196666, 13, 0, 196667, 13, 0, 196668, 13, 0, 196669, 13, 0, 196670, 13, 0, 196671, 13, 0, 262147, 13, 0, 262148, 13, 0, 262178, 13, 0, 262179, 13, 0, 262206, 13, 0, 262207, 13, 0, 327683, 13, 0, 327684, 13, 0, 327714, 13, 0, 327715, 13, 0, 327742, 13, 0, 327743, 13, 0, 393219, 13, 0, 393220, 13, 0, 393250, 13, 0, 393251, 13, 0, 393278, 13, 0, 393279, 13, 0, 458755, 13, 0, 458756, 13, 0, 458786, 13, 0, 458787, 13, 0, 458814, 13, 0, 458815, 13, 0, 524291, 13, 0, 524292, 13, 0, 524322, 13, 0, 524323, 13, 0, 524350, 13, 0, 524351, 13, 0, 589827, 13, 0, 589828, 13, 0, 589858, 13, 0, 589859, 13, 0, 589886, 13, 0, 589887, 13, 0, 655363, 13, 0, 655364, 13, 0, 655377, 13, 0, 655378, 13, 0, 655379, 13, 0, 655380, 13, 0, 655381, 13, 0, 655382, 13, 0, 655383, 13, 0, 655384, 13, 0, 655385, 13, 0, 655386, 13, 0, 655387, 13, 0, 655388, 13, 0, 655389, 13, 0, 655390, 13, 0, 655391, 13, 0, 655392, 13, 0, 655393, 13, 0, 655394, 13, 0, 655395, 13, 0, 655396, 13, 0, 655397, 13, 0, 655398, 13, 0, 655399, 13, 0, 655400, 13, 0, 655401, 13, 0, 655402, 13, 0, 655403, 13, 0, 655404, 13, 0, 655405, 13, 0, 655406, 13, 0, 655407, 13, 0, 655408, 13, 0, 655409, 13, 0, 655410, 13, 0, 655411, 13, 0, 655422, 13, 0, 655423, 13, 0, 720899, 13, 0, 720900, 13, 0, 720913, 13, 0, 720914, 13, 0, 720915, 13, 0, 720916, 13, 0, 720917, 13, 0, 720918, 13, 0, 720919, 13, 0, 720920, 13, 0, 720921, 13, 0, 720922, 13, 0, 720923, 13, 0, 720924, 13, 0, 720925, 13, 0, 720926, 13, 0, 720927, 13, 0, 720928, 13, 0, 720929, 13, 0, 720930, 13, 0, 720931, 13, 0, 720932, 13, 0, 720933, 13, 0, 720934, 13, 0, 720935, 13, 0, 720936, 13, 0, 720937, 13, 0, 720938, 13, 0, 720939, 13, 0, 720940, 13, 0, 720941, 13, 0, 720942, 13, 0, 720943, 13, 0, 720944, 13, 0, 720945, 13, 0, 720946, 13, 0, 720947, 13, 0, 720958, 13, 0, 720959, 13, 0, 786435, 13, 0, 786436, 13, 0, 786449, 13, 0, 786450, 13, 0, 786482, 13, 0, 786483, 13, 0, 786494, 13, 0, 786495, 13, 0, 851971, 13, 0, 851972, 13, 0, 851985, 13, 0, 851986, 13, 0, 852018, 13, 0, 852019, 13, 0, 852030, 13, 0, 852031, 13, 0, 917507, 13, 0, 917508, 13, 0, 917521, 13, 0, 917522, 13, 0, 917554, 13, 0, 917555, 13, 0, 917566, 13, 0, 917567, 13, 0, 983043, 13, 0, 983044, 13, 0, 983057, 13, 0, 983058, 13, 0, 983090, 13, 0, 983091, 13, 0, 983102, 13, 0, 983103, 13, 0, 1048579, 13, 0, 1048580, 13, 0, 1048593, 13, 0, 1048594, 13, 0, 1048626, 13, 0, 1048627, 13, 0, 1048638, 13, 0, 1048639, 13, 0, 1114115, 13, 0, 1114116, 13, 0, 1114117, 13, 0, 1114118, 13, 0, 1114119, 13, 0, 1114120, 13, 0, 1114121, 13, 0, 1114122, 13, 0, 1114123, 13, 0, 1114124, 13, 0, 1114125, 13, 0, 1114126, 13, 0, 1114127, 13, 0, 1114128, 13, 0, 1114129, 13, 0, 1114130, 13, 0, 1114131, 13, 0, 1114132, 13, 0, 1114133, 13, 0, 1114134, 13, 0, 1114135, 13, 0, 1114136, 13, 0, 1114137, 13, 0, 1114138, 13, 0, 1114139, 13, 0, 1114140, 13, 0, 1114141, 13, 0, 1114142, 13, 0, 1114143, 13, 0, 1114144, 13, 0, 1114145, 13, 0, 1114146, 13, 0, 1114147, 13, 0, 1114148, 13, 0, 1114149, 13, 0, 1114150, 13, 0, 1114151, 13, 0, 1114152, 13, 0, 1114153, 13, 0, 1114154, 13, 0, 1114155, 13, 0, 1114156, 13, 0, 1114157, 13, 0, 1114158, 13, 0, 1114159, 13, 0, 1114160, 13, 0, 1114161, 13, 0, 1114162, 13, 0, 1114163, 13, 0, 1114164, 13, 0, 1114165, 13, 0, 1114166, 13, 0, 1114167, 13, 0, 1114168, 13, 0, 1114169, 13, 0, 1114170, 13, 0, 1114171, 13, 0, 1114172, 13, 0, 1114173, 13, 0, 1114174, 13, 0, 1114175, 13, 0, 1179651, 13, 0, 1179652, 13, 0, 1179653, 13, 0, 1179654, 13, 0, 1179655, 13, 0, 1179656, 13, 0, 1179657, 13, 0, 1179658, 13, 0, 1179659, 13, 0, 1179660, 13, 0, 1179661, 13, 0, 1179662, 13, 0, 1179663, 13, 0, 1179664, 13, 0, 1179665, 13, 0, 1179666, 13, 0, 1179667, 13, 0, 1179668, 13, 0, 1179669, 13, 0, 1179670, 13, 0, 1179671, 13, 0, 1179672, 13, 0, 1179673, 13, 0, 1179674, 13, 0, 1179675, 13, 0, 1179676, 13, 0, 1179677, 13, 0, 1179678, 13, 0, 1179679, 13, 0, 1179680, 13, 0, 1179681, 13, 0, 1179682, 13, 0, 1179683, 13, 0, 1179684, 13, 0, 1179685, 13, 0, 1179686, 13, 0, 1179687, 13, 0, 1179688, 13, 0, 1179689, 13, 0, 1179690, 13, 0, 1179691, 13, 0, 1179692, 13, 0, 1179693, 13, 0, 1179694, 13, 0, 1179695, 13, 0, 1179696, 13, 0, 1179697, 13, 0, 1179698, 13, 0, 1179699, 13, 0, 1179700, 13, 0, 1179701, 13, 0, 1179702, 13, 0, 1179703, 13, 0, 1179704, 13, 0, 1179705, 13, 0, 1179706, 13, 0, 1179707, 13, 0, 1179708, 13, 0, 1179709, 13, 0, 1179710, 13, 0, 1179711, 13, 0, 1245187, 13, 0, 1245188, 13, 0, 1245201, 13, 0, 1245202, 13, 0, 1245234, 13, 0, 1245235, 13, 0, 1245246, 13, 0, 1245247, 13, 0, 1310723, 13, 0, 1310724, 13, 0, 1310737, 13, 0, 1310738, 13, 0, 1310770, 13, 0, 1310771, 13, 0, 1310782, 13, 0, 1310783, 13, 0, 1376259, 13, 0, 1376260, 13, 0, 1376273, 13, 0, 1376274, 13, 0, 1376306, 13, 0, 1376307, 13, 0, 1376318, 13, 0, 1376319, 13, 0, 1441795, 13, 0, 1441796, 13, 0, 1441809, 13, 0, 1441810, 13, 0, 1441842, 13, 0, 1441843, 13, 0, 1441854, 13, 0, 1441855, 13, 0, 1507331, 13, 0, 1507332, 13, 0, 1507345, 13, 0, 1507346, 13, 0, 1507378, 13, 0, 1507379, 13, 0, 1507390, 13, 0, 1507391, 13, 0, 1572867, 13, 0, 1572868, 13, 0, 1572881, 13, 0, 1572882, 13, 0, 1572914, 13, 0, 1572915, 13, 0, 1572926, 13, 0, 1572927, 13, 0, 1638403, 13, 0, 1638404, 13, 0, 1638417, 13, 0, 1638418, 13, 0, 1638450, 13, 0, 1638451, 13, 0, 1638462, 13, 0, 1638463, 13, 0, 1703939, 13, 0, 1703940, 13, 0, 1703953, 13, 0, 1703954, 13, 0, 1703986, 13, 0, 1703987, 13, 0, 1703998, 13, 0, 1703999, 13, 0, 1769475, 13, 0, 1769476, 13, 0, 1769477, 13, 0, 1769478, 13, 0, 1769479, 13, 0, 1769480, 13, 0, 1769481, 13, 0, 1769482, 13, 0, 1769483, 13, 0, 1769484, 13, 0, 1769485, 13, 0, 1769486, 13, 0, 1769487, 13, 0, 1769488, 13, 0, 1769489, 13, 0, 1769490, 13, 0, 1769491, 13, 0, 1769492, 13, 0, 1769493, 13, 0, 1769494, 13, 0, 1769495, 13, 0, 1769496, 13, 0, 1769497, 13, 0, 1769498, 13, 0, 1769499, 13, 0, 1769500, 13, 0, 1769501, 13, 0, 1769502, 13, 0, 1769503, 13, 0, 1769504, 13, 0, 1769505, 13, 0, 1769506, 13, 0, 1769507, 13, 0, 1769508, 13, 0, 1769509, 13, 0, 1769510, 13, 0, 1769511, 13, 0, 1769512, 13, 0, 1769513, 13, 0, 1769514, 13, 0, 1769515, 13, 0, 1769516, 13, 0, 1769517, 13, 0, 1769518, 13, 0, 1769519, 13, 0, 1769520, 13, 0, 1769521, 13, 0, 1769522, 13, 0, 1769523, 13, 0, 1769524, 13, 0, 1769525, 13, 0, 1769526, 13, 0, 1769527, 13, 0, 1769528, 13, 0, 1769529, 13, 0, 1769530, 13, 0, 1769531, 13, 0, 1769532, 13, 0, 1769533, 13, 0, 1769534, 13, 0, 1769535, 13, 0, 1835011, 13, 0, 1835012, 13, 0, 1835013, 13, 0, 1835014, 13, 0, 1835015, 13, 0, 1835016, 13, 0, 1835017, 13, 0, 1835018, 13, 0, 1835019, 13, 0, 1835020, 13, 0, 1835021, 13, 0, 1835022, 13, 0, 1835023, 13, 0, 1835024, 13, 0, 1835025, 13, 0, 1835026, 13, 0, 1835027, 13, 0, 1835028, 13, 0, 1835029, 13, 0, 1835030, 13, 0, 1835031, 13, 0, 1835032, 13, 0, 1835033, 13, 0, 1835034, 13, 0, 1835035, 13, 0, 1835036, 13, 0, 1835037, 13, 0, 1835038, 13, 0, 1835039, 13, 0, 1835040, 13, 0, 1835041, 13, 0, 1835042, 13, 0, 1835043, 13, 0, 1835044, 13, 0, 1835045, 13, 0, 1835046, 13, 0, 1835047, 13, 0, 1835048, 13, 0, 1835049, 13, 0, 1835050, 13, 0, 1835051, 13, 0, 1835052, 13, 0, 1835053, 13, 0, 1835054, 13, 0, 1835055, 13, 0, 1835056, 13, 0, 1835057, 13, 0, 1835058, 13, 0, 1835059, 13, 0, 1835060, 13, 0, 1835061, 13, 0, 1835062, 13, 0, 1835063, 13, 0, 1835064, 13, 0, 1835065, 13, 0, 1835066, 13, 0, 1835067, 13, 0, 1835068, 13, 0, 1835069, 13, 0, 1835070, 13, 0, 1835071, 13, 0, 1900547, 13, 0, 1900548, 13, 0, 1900561, 13, 0, 1900562, 13, 0, 1900594, 13, 0, 1900595, 13, 0, 1900606, 13, 0, 1900607, 13, 0, 1966083, 13, 0, 1966084, 13, 0, 1966097, 13, 0, 1966098, 13, 0, 1966130, 13, 0, 1966131, 13, 0, 1966142, 13, 0, 1966143, 13, 0, 2031619, 13, 0, 2031620, 13, 0, 2031633, 13, 0, 2031634, 13, 0, 2031666, 13, 0, 2031667, 13, 0, 2031678, 13, 0, 2031679, 13, 0, 2097155, 13, 0, 2097156, 13, 0, 2097169, 13, 0, 2097170, 13, 0, 2097202, 13, 0, 2097203, 13, 0, 2097214, 13, 0, 2097215, 13, 0, 2162691, 13, 0, 2162692, 13, 0, 2162705, 13, 0, 2162706, 13, 0, 2162738, 13, 0, 2162739, 13, 0, 2162750, 13, 0, 2162751, 13, 0, 2228227, 13, 0, 2228228, 13, 0, 2228241, 13, 0, 2228242, 13, 0, 2228274, 13, 0, 2228275, 13, 0, 2228286, 13, 0, 2228287, 13, 0, 2293763, 13, 0, 2293764, 13, 0, 2293765, 13, 0, 2293766, 13, 0, 2293767, 13, 0, 2293768, 13, 0, 2293769, 13, 0, 2293770, 13, 0, 2293771, 13, 0, 2293772, 13, 0, 2293773, 13, 0, 2293774, 13, 0, 2293775, 13, 0, 2293776, 13, 0, 2293777, 13, 0, 2293778, 13, 0, 2293779, 13, 0, 2293780, 13, 0, 2293781, 13, 0, 2293782, 13, 0, 2293783, 13, 0, 2293784, 13, 0, 2293785, 13, 0, 2293786, 13, 0, 2293787, 13, 0, 2293788, 13, 0, 2293789, 13, 0, 2293790, 13, 0, 2293791, 13, 0, 2293792, 13, 0, 2293793, 13, 0, 2293794, 13, 0, 2293795, 13, 0, 2293796, 13, 0, 2293797, 13, 0, 2293798, 13, 0, 2293799, 13, 0, 2293800, 13, 0, 2293801, 13, 0, 2293802, 13, 0, 2293803, 13, 0, 2293804, 13, 0, 2293805, 13, 0, 2293806, 13, 0, 2293807, 13, 0, 2293808, 13, 0, 2293809, 13, 0, 2293810, 13, 0, 2293811, 13, 0, 2293812, 13, 0, 2293813, 13, 0, 2293814, 13, 0, 2293815, 13, 0, 2293816, 13, 0, 2293817, 13, 0, 2293818, 13, 0, 2293819, 13, 0, 2293820, 13, 0, 2293821, 13, 0, 2293822, 13, 0, 2293823, 13, 0, 2359299, 13, 0, 2359300, 13, 0, 2359301, 13, 0, 2359302, 13, 0, 2359303, 13, 0, 2359304, 13, 0, 2359305, 13, 0, 2359306, 13, 0, 2359307, 13, 0, 2359308, 13, 0, 2359309, 13, 0, 2359310, 13, 0, 2359311, 13, 0, 2359312, 13, 0, 2359313, 13, 0, 2359314, 13, 0, 2359315, 13, 0, 2359316, 13, 0, 2359317, 13, 0, 2359318, 13, 0, 2359319, 13, 0, 2359320, 13, 0, 2359321, 13, 0, 2359322, 13, 0, 2359323, 13, 0, 2359324, 13, 0, 2359325, 13, 0, 2359326, 13, 0, 2359327, 13, 0, 2359328, 13, 0, 2359329, 13, 0, 2359330, 13, 0, 2359331, 13, 0, 2359332, 13, 0, 2359333, 13, 0, 2359334, 13, 0, 2359335, 13, 0, 2359336, 13, 0, 2359337, 13, 0, 2359338, 13, 0, 2359339, 13, 0, 2359340, 13, 0, 2359341, 13, 0, 2359342, 13, 0, 2359343, 13, 0, 2359344, 13, 0, 2359345, 13, 0, 2359346, 13, 0, 2359347, 13, 0, 2359348, 13, 0, 2359349, 13, 0, 2359350, 13, 0, 2359351, 13, 0, 2359352, 13, 0, 2359353, 13, 0, 2359354, 13, 0, 2359355, 13, 0, 2359356, 13, 0, 2359357, 13, 0, 2359358, 13, 0, 2359359, 13, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="." index="2"]

visible = false
position = Vector2( 24.728, 16.7356 )
scale = Vector2( 0.7, 0.7 )
navpoly = SubResource( 1 )
enabled = true
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Paths" type="Node" parent="." index="3"]

[node name="Path1" type="Path2D" parent="Paths" index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
scale = Vector2( 0.7, 0.7 )
curve = SubResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Path1" index="0"]

position = Vector2( 550.714, 51.9934 )
rotation = 0.00527637
scale = Vector2( 0.3, 0.3 )
offset = 500.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="NodeOne" parent="Paths/Path1/PathFollow2D" index="0" groups=[
"Nodes",
] instance=ExtResource( 4 )]

position = Vector2( 2.49347, -1.21412 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 128
collision_mask = 64
_sections_unfolded = [ "Collision" ]

[node name="Path2" type="Path2D" parent="Paths" index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
scale = Vector2( 0.7, 0.7 )
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Path2" index="0"]

position = Vector2( 957.373, 421.538 )
rotation = -1.56424
scale = Vector2( 0.3, 0.3 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="NodeTwo" parent="Paths/Path2/PathFollow2D" index="0" groups=[
"Nodes",
] instance=ExtResource( 4 )]

scale = Vector2( 1.5, 1.5 )
collision_layer = 128
collision_mask = 64
_sections_unfolded = [ "Collision" ]

[node name="Path3" type="Path2D" parent="Paths" index="2"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
scale = Vector2( 0.7, 0.7 )
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Path3" index="0"]

position = Vector2( 273.277, 161.389 )
rotation = 0.00470902
scale = Vector2( 0.3, 0.3 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="NodeThree" parent="Paths/Path3/PathFollow2D" index="0" groups=[
"Nodes",
] instance=ExtResource( 4 )]

scale = Vector2( 1.5, 1.5 )
collision_layer = 128
collision_mask = 64
_sections_unfolded = [ "Collision" ]

[node name="Path4" type="Path2D" parent="Paths" index="3"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
scale = Vector2( 0.7, 0.7 )
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Path4" index="0"]

position = Vector2( 55.2001, 272.838 )
rotation = 1.58561
scale = Vector2( 0.3, 0.3 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="NodeFour" parent="Paths/Path4/PathFollow2D" index="0" groups=[
"Nodes",
] instance=ExtResource( 4 )]

scale = Vector2( 1.5, 1.5 )
collision_layer = 128
collision_mask = 128
_sections_unfolded = [ "Collision" ]

[node name="Hor" type="Area2D" parent="." index="4" groups=[
"Switches",
]]

editor/display_folded = true
position = Vector2( 1511.66, 789.76 )
scale = Vector2( 0.7, 0.7 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 64
collision_mask = 128
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Switch" type="Sprite" parent="Hor" index="0"]

modulate = Color( 1, 0, 0, 1 )
rotation = 0.00173805
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hor" index="1"]

shape = SubResource( 6 )

[node name="Hor2" type="Area2D" parent="." index="5" groups=[
"Switches",
]]

editor/display_folded = true
position = Vector2( 1511.66, 1602.26 )
scale = Vector2( 0.7, 0.7 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 64
collision_mask = 128
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Switch" type="Sprite" parent="Hor2" index="0"]

modulate = Color( 1, 0, 0, 1 )
rotation = 0.00173805
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hor2" index="1"]

shape = SubResource( 6 )

[node name="Vert" type="Area2D" parent="." index="6" groups=[
"Switches",
]]

editor/display_folded = true
position = Vector2( 1543.75, 289.583 )
scale = Vector2( 0.976564, 0.976561 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 64
collision_mask = 128
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Switch" type="Sprite" parent="Vert" index="0"]

modulate = Color( 1, 0, 0, 1 )
rotation = 0.00173805
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vert" index="1"]

shape = SubResource( 6 )


